[Style] Fixes full-width underline of next/prev on mobile.

--- a/_sass/screen.scss
+++ b/_sass/screen.scss
@@ -449,13 +449,12 @@ article {
 
   @media screen and (max-width: 799px) {
     p.meta-paginate a {
-      float: none;
-      clear: none;
+      float: left;
+      clear: both;
       overflow: hidden;
       text-overflow: ellipsis;
       display: inline-block;
       white-space: nowrap;
-      width: 100%;
     }
   }
 
